# batched_solver

./: .gitignore
ccode/: .note.txt.swo  .note.txt.swp  CMakeLists.txt
ccode/include/: .cg.h.swp  .jacobi.hpp.swp  .mg.hpp.swp  BSR_jacobi.h  cg.h  cg.hpp  io.h  jacobi.h  jacobi.hpp  load_data.hpp  mg.h  mg.hpp  util.h  util.hpp
ccode/src/: .DG.cpp.swp  DG.cpp
code/: block.py  cg.py  direct_sparse.py  driver.py  load_data.py  mg.py  pointwise.py  sp_block.py
profile/: direct_spsolve.prof  direct_spsolve.txt
